service.yaml
apiVersion: v1
kind: Service

metadata:
  name: todo-service

spec:
  type: NodePort

  selector:
    app: todo-app

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
